--- a/style_home.css
+++ b/style_home.css
@@ -12,6 +12,8 @@
     padding: 8px 15x;
     z-index: 2;
     overflow: hidden;
+    position: sticky;
+    top: 0px;
 }
 
 .logo {
@@ -79,7 +81,7 @@
 }
 .hero_section{
     width: 100%;
-    height: 40%;
+    padding: 30px;
     margin: auto;
     background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSEPyrSSvXclL5qDxuo2HH67xpWq2aMe9-k7w&s");
     background-repeat: no-repeat;
@@ -87,9 +89,6 @@
     color: #fff;
     text-align: center;
     line-height: inherit;
-}
-.hero_section h1{
-    font-size: 50px;
 }
 .hero_section img{
     width:100%;
