--- a/style_home.css
+++ b/style_home.css
@@ -77,7 +77,7 @@
 .container1{
     width: 90%;
     margin: auto;
-    height: 200vh;
+    /* height: 200vh; */
 }
 .hero_section{
     width: 100%;
@@ -151,3 +151,108 @@ label {
     color: #fff;
     cursor: pointer;
 }
+.apicall{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    padding: 5px;
+    gap: 15px;
+
+}
+.apicall div{
+    border-radius: 25px 50px;
+    text-align: center;
+    padding: 10px;
+    transition: all .8s ease-in-out;
+    border: .1px solid gray;
+}
+.apicall div:hover{
+    transform: scale(1.02);
+    border: 1px solid gray;
+    cursor: pointer;
+}
+
+.apicall div img{
+    width: 200px;
+    height: 250px;
+    /* border-radius: 25px 50px; */
+    transition: all .8s ease-in-out;
+}
+.apicall div img:hover{
+    transform: scale(1.04);
+    cursor: pointer;
+}
+.apicall div h5{
+    font-size: 20px;
+    font-weight: 600;
+    color: blue;
+}
+.apicall div p{
+    font-size: 13px;
+
+}
+#buy{
+    background-color: red;
+    color: #fff;
+    transition: all 1s ease-in-out;
+    border: none;
+    padding: 8px 16px;
+    margin-top: 10px;
+    border-radius: 8px;
+    margin-left: 10px;
+}
+#buy:hover{
+    background-color: rgba(255, 0, 0, 0.699);
+    cursor: pointer;
+}
+#add{
+    background-color: green;
+    color: #fff;
+    transition: all 1s ease-in-out;
+    border: none;
+    padding: 8px 16px;
+    margin-top: 10px;
+    border-radius: 8px;
+}
+#add:hover{
+    background-color: rgba(0, 255, 0, 0.925);
+    cursor: pointer;
+}
+.footer {
+    margin-top: 40px;
+    background-color: #333;
+    color: white;
+    padding: 20px;
+    text-align: center;
+  }
+  #main_footer {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: auto;
+    color: white;
+  }
+  .follow_us {
+    width: 30%;
+  }
+  .follow_us ul {
+    font-size: 25px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: space-evenly;
+  }
+  ul li {
+    list-style: none;
+    margin-bottom: 5px;
+  }
+  a {
+    text-decoration: none;
+    color: white;
+  }
+  h3{
+    margin-bottom: 10px;
+  }
+
