--- a/style_home.css
+++ b/style_home.css
@@ -9,7 +9,7 @@
     justify-content: space-evenly;
     align-items: center;
     background-color: #333;
-    padding: 8px 15x;
+    padding: 8px 15px;
     z-index: 2;
     overflow: hidden;
     position: sticky;
@@ -82,7 +82,7 @@
 .hero_section{
     width: 100%;
     padding: 30px;
-    height: 30%;
+    height: 100vh;
     margin: auto;
     background-image: url("https://img.freepik.com/free-photo/blue-office-stationery-set-with-laptop_23-2147843325.jpg?size=626&ext=jpg&ga=GA1.1.2008272138.1721260800&semt=ais_user");
     background-repeat: no-repeat;
@@ -256,3 +256,155 @@ label {
     margin-bottom: 10px;
   }
 
+  @media screen and (min-width:200px) and (max-width:767px) {
+    .navbar {
+        padding: 15px 25px;
+        z-index: 2;
+        overflow: hidden;
+        position: sticky;
+        top: 0px;
+    }
+    .container{
+       width: 98%;
+    }
+    .nav_links {
+        display: none;
+        position: absolute;
+        background-color: #333;
+        top: 60px;
+        right: 20px;
+        flex-direction: column;
+        width: 200px;
+        gap: 0;
+    }
+    .logo{
+        display: none;
+    }
+    .nav_links li {
+        display: block;
+        text-align: center;
+    }
+
+    .menu_icon {
+        display: flex;
+    }
+
+    .nav_links.active {
+        display: flex;
+    }
+    .hero_section{
+        height: 40%;
+    }
+    .hero_section img{
+        width:100%;
+    }
+    .additional_form{
+        width: 100%;
+        margin: auto;
+        display: block;
+    }
+    .img_div , .form_div{
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        width: 100%;
+        height: 20%;
+        /* border: 1px solid red; */
+    
+    }
+    .img_div img{
+        width: 100%;
+        height: 100%;
+    }
+      input[type="text"], input[type="email"] {
+        width: 98%;
+    }
+    .apicall{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+    
+      #main_footer {
+        display: block;
+        gap: 20px;
+      }
+      .follow_us {
+        width: 98%;
+      }
+      
+}
+@media screen and (min-width:768px) and (max-width:1080px) {
+    .navbar {
+        padding: 15px 25px;
+        z-index: 2;
+        overflow: hidden;
+        position: sticky;
+        top: 0px;
+    }
+    .container{
+       width: 98%;
+    }
+    .nav_links {
+        display: none;
+        position: absolute;
+        background-color: #333;
+        top: 60px;
+        right: 20px;
+        flex-direction: column;
+        width: 200px;
+        gap: 0;
+    }
+    .logo{
+        display: none;
+    }
+    .nav_links li {
+        display: block;
+        text-align: center;
+    }
+
+    .menu_icon {
+        display: flex;
+    }
+
+    .nav_links.active {
+        display: flex;
+    }
+    .hero_section{
+        height: 40%;
+    }
+    .hero_section img{
+        width:100%;
+    }
+    .additional_form{
+        width: 100%;
+        margin: auto;
+        display: block;
+    }
+    .img_div , .form_div{
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        width: 100%;
+        height: 20%;
+        /* border: 1px solid red; */
+    
+    }
+    .img_div img{
+        width: 100%;
+        height: 100%;
+    }
+      input[type="text"], input[type="email"] {
+        width: 98%;
+    }
+    .apicall{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+    }
+    
+      #main_footer {
+        display: block;
+        gap: 20px;
+      }
+      .follow_us {
+        width: 98%;
+      }
+      
+}
