--- a/style_home.css
+++ b/style_home.css
@@ -39,7 +39,7 @@
 .nav_links a {
     color: #fff;
     text-decoration: none;
-    padding: 15px 20px;
+    padding: 10px 15px;
     transition: all .8s ease-in-out;
     margin-left: 80px;
 }
@@ -85,7 +85,7 @@
     padding: 30px;
     height: 80vh;
     margin: auto;
-    background-image: url("https://img.freepik.com/free-photo/blue-office-stationery-set-with-laptop_23-2147843325.jpg?size=626&ext=jpg&ga=GA1.1.2008272138.1721260800&semt=ais_user");
+    background-image: url("https://img.freepik.com/free-photo/abstract-2d-colorful-wallpaper-with-grainy-gradients_23-2151001649.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     color: black;
@@ -95,19 +95,32 @@
 .hero_section img{
     width:100%;
 }
+.hero_section p{
+    color: black;
+    font-size: 20px;
+}
 .additional_form{
     width: 100%;
     margin:15px auto;
     display: flex;
     justify-content: space-between;
 }
-.img_div , .form_div{
+.img_div{
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
     width: 50%;
     height: 20%;
-    /* border: 1px solid red; */
+}
+.form_div{
+  width: 100%; 
 
+}
+.main_form{
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    width: 50%;
+    display: grid;
+    place-items: center;
 }
 .img_div img{
     width: 100%;
@@ -296,8 +309,12 @@ label {
         display: flex;
     }
     .hero_section{
+        padding: 25px;
         width: 90%;
-        height: 40%;
+        margin: auto;
+    }
+    .hero_section,.hero_section p{
+        color: white;
     }
     .hero_section img{
         width:100%;
@@ -307,14 +324,19 @@ label {
         margin: auto;
         display: block;
     }
+    .main_form{
+        width: 100%;
+        display: block;
+    }
     .img_div , .form_div{
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        padding: 20px;
+        padding: 0px;
         width: 100%;
         height: 20%;
         /* border: 1px solid red; */
     
     }
+    
     .img_div img{
         width: 100%;
         height: 100%;
@@ -372,7 +394,8 @@ label {
     .nav_links.active {
         display: flex;
     }
-    .hero_section{
+    .hero_section,.hero_section p{
+        color: white;
         height: 40%;
     }
     .hero_section img{
@@ -383,13 +406,16 @@ label {
         margin: auto;
         display: block;
     }
+    .main_form{
+        width: 100%;
+        display: block;
+    }
     .img_div , .form_div{
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        padding: 20px;
+        padding: 0px;
         width: 100%;
         height: 20%;
         /* border: 1px solid red; */
-    
     }
     .img_div img{
         width: 100%;
