final project complete with media quary mobile and laptop sereen

--- a/style_home.css
+++ b/style_home.css
@@ -83,22 +83,19 @@
 .hero_section{
     width: 98%;
     padding: 30px;
-    height: 80vh;
+    height: 50vh;
     margin: auto;
-    background-image: url("https://img.freepik.com/free-photo/abstract-2d-colorful-wallpaper-with-grainy-gradients_23-2151001649.jpg");
+    background-image: url("https://i.ytimg.com/vi/II0cF9hFQ_g/maxresdefault.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    color: black;
+    color: white;
     text-align: center;
     line-height: inherit;
 }
 .hero_section img{
-    width:100%;
+    width:90%;
 }
-.hero_section p{
-    color: black;
-    font-size: 20px;
-}
+
 .additional_form{
     width: 100%;
     margin:15px auto;
@@ -312,6 +309,7 @@ label {
         padding: 25px;
         width: 90%;
         margin: auto;
+        height: 50vh;
     }
     .hero_section,.hero_section p{
         color: white;
@@ -360,7 +358,7 @@ label {
 }
 @media screen and (min-width:768px) and (max-width:1080px) {
     .navbar {
-        padding: 15px 25px;
+        padding: 14px 18px;
         z-index: 2;
         overflow: hidden;
         position: sticky;
@@ -394,9 +392,11 @@ label {
     .nav_links.active {
         display: flex;
     }
-    .hero_section,.hero_section p{
+    .hero_section{
         color: white;
-        height: 40%;
+        height: auto;
+        padding: 25px;
+        height: 50vh;
     }
     .hero_section img{
         width:100%;
